examples/kubernetes/quickstarts/proxy-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
  namespace: quickstarts
  labels:
    app.kubernetes.io/name: echo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echo-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: heimdall
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "heimdall:local"
          args: [ "-c", "/heimdall/heimdall.yaml", "serve", "proxy2" ]
          ports:
            - name: http-port
              protocol: TCP
              containerPort: 4455
          volumeMounts:
            - name: config
              mountPath: /heimdall/heimdall.yaml
              subPath: heimdall.yaml
              readOnly: true
            - name: rules
              mountPath: /heimdall/rules.yaml
              subPath: rules.yaml
              readOnly: true
        - name: echo-app
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "containous/whoami:latest"
          args: [ "--port", "8080", "--name", "echo-app" ]

      volumes:
        - name: config
          configMap:
            name: heimdall-config
            items:
              - key: heimdall.yaml
                path: heimdall.yaml
        - name: rules
          configMap:
            name: heimdall-rules
            items:
              - key: rules.yaml
                path: rules.yaml
