examples/kubernetes/quickstarts/proxy-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-app
  namespace: quickstarts
  labels:
    app.kubernetes.io/name: echo-app
spec:
  ports:
    - name: app-port
      port: 8080
      targetPort: http-port
  selector:
    app.kubernetes.io/name: echo-app
